--- a/UpdateSubscriber-Service/src/main/resources/application.properties
+++ b/UpdateSubscriber-Service/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=UpdateSubscriber-Service
+server.port=9093
+
+spring.datasource.url = jdbc:mysql://localhost:3306/sms-poc-subscriber
+spring.datasource.username = root
+spring.datasource.password = netweb12
+spring.jpa.generate-ddl=false
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
