--- a/UpdateSubscriber-Service/src/main/resources/application.properties
+++ b/UpdateSubscriber-Service/src/main/resources/application.properties
@@ -9,3 +9,19 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+#RabbitMq Config
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+
+eureka.instance.preferIpAddress=true
+
+rabbitmq.queue.name=email-queue
+rabbitmq.exchange.name=email-exchange
+rabbitmq.routing.key=email-routing-key
+spring.rabbitmq.virtual-host=/
+
+#Eureka
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
